--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ css: ["index.css"]
 <div class="row">
   {% for post in paginator.posts %}
   <div class="col s12">
+	<a href="{{post.url | prepend: site.baseurl}}">
     <div class="card hoverable">
       <div class="card-content">
         <span id="post-title" class="card-title">{{post.title}}</span>
@@ -20,6 +21,7 @@ css: ["index.css"]
         </a>
       </div>
     </div>
+	</a>
   </div>
   {% endfor %}
   <div class="col s12 center-align">
