--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ css: ["index.css"]
           <i class="material-icons">date_range</i>
           {{post.date | date: "%d/%m/%Y %H:%M"}}
         </p>
-        <p id="post-content">{{post.excerpt | remove: '<p>' | remove: '</p>'}}</p>
+        <p id="post-content" style="font-size:20px">{{post.excerpt | remove: '<p>' | remove: '</p>'}}</p>
       </div>
       <div class="card-action">
         <a href="{{post.url | prepend: site.baseurl}}">
